# briefloop

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  HERMES.md  LICENSE  README.md  README.zh-CN.md  README_en.md  onboarding.json  opencode.jsonc  pyproject.toml  reasonix.toml
.agents/: AGENTS.md
.claude/agents/: analyst.md  auditor.md  claim-ledger.md  draft-audit-harness.md  editor.md  final-quality-harness.md  formatter.md  market-competitor-analyst.md  market-competitor-auditor.md  market-competitor-planner.md  orchestrator.md  rendered-output-harness.md  scout.md  screener.md  source-planner.md  source-provider.md
.claude/commands/: briefloop.md  capability.md  generate-brief.md  init-brief.md  mabw.md  propose-competitors.md
.codebuddy/agents/: briefloop-analyst.md  briefloop-auditor.md  briefloop-claim-ledger.md  briefloop-editor.md  briefloop-formatter.md  briefloop-scout.md  briefloop-screener.md
.codex/: config.toml
.codex/agents/: analyst.toml  auditor.toml  claim-ledger.toml  draft-audit-harness.toml  editor.toml  final-quality-harness.toml  formatter.toml  market-competitor-analyst.toml  market-competitor-auditor.toml  market-competitor-planner.toml  orchestrator.toml  rendered-output-harness.toml  scout.toml  screener.toml  source-planner.toml  source-provider.toml
.githooks/: post-checkout  post-merge  post-rewrite  pre-push
.github/: SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: epic.md  task.md
.github/workflows/: tests.yml
.opencode/agents/: brief-analyst.md  brief-auditor.md  brief-claim-ledger.md  brief-draft-audit-harness.md  brief-editor.md  brief-final-quality-harness.md  brief-formatter.md  brief-market-competitor-analyst.md  brief-market-competitor-auditor.md  brief-market-competitor-planner.md  brief-orchestrator.md  brief-rendered-output-harness.md  brief-scout.md  brief-screener.md  brief-source-planner.md  brief-source-provider.md
.opencode/commands/: briefloop.md  capability.md  generate-brief.md
Formula/: multi-agent-brief.rb
brief-workspace/: .gitignore  config.yaml  profile.yaml  sources.yaml  user.md
brief-workspace/input/: market_news.json
configs/: agent_roles.yaml  agents.yaml  artifact_contracts.yaml  default.yaml  orchestrator_contract.yaml  stage_specs.yaml  terminology.yaml
configs/policy_packs/: default.yaml
configs/policy_profiles/: internet_default.yaml  manufacturing_default.yaml
configs/report_packs/: management_monthly.yaml
configs/report_templates/: evidence_extract.yaml  management_monthly.yaml  market_weekly.yaml  solar_industry_periodic.yaml
docs/: 15-minute-pilot.md  15-minute-pilot.zh-CN.md  MIGRATION.md  MIGRATION.zh-CN.md  README.md  agent-collaboration.md  agent-contract.md  agent-dev-guide.zh-CN.md  agent-dev-prompt.zh-CN.md  architecture-memo-content-control-decoupling-2026-06-11.md  architecture-memo-quality-law-three-layers-2026-06-11.md  architecture-memo-recursive-dogfooding-2026-06-11.md  architecture-memo-reference-run-post-mortem-2026-06-11.md  architecture-status.md  architecture-status.zh-CN.md  architecture.md  architecture.zh-CN.md  briefloop-architecture-reference-v0.3.0.md  briefloop-architecture-reference-v0.4.0-revision-roadmap.md  briefloop-architecture-reference-v0.4.0.en.html  briefloop-architecture-reference-v0.4.0.en.md  briefloop-architecture-reference-v0.4.0.html  briefloop-architecture-reference-v0.4.0.md  briefloop-architecture-reference-v0.6.1.en.md  briefloop-architecture-reference-v0.6.1.md  briefloop-naming.md  claim-support-matrix.md  claude-code-quickstart.md  claude-code-workflow.md  code-review-fix-guide.md  contact.md  contact.zh-CN.md  control-surfaces.md  control-surfaces.zh-CN.md  design-note-preference-taste-governance-2026-06-11.md  evaluation-cases.md  evidence-span-registry.md  experiments-080.md  features.md  features.zh-CN.md  (+47 more)
docs/agents/: README.md  claude-code.md  codex.md  harness-subagents.md  manifest.md  opencode.md
docs/archive/: README.md  harness_matrix.md  (+3 more)
private_planning/: v0.7.2-changelog-draft.internal.md  v0.7.2-pr4-improvement-schema-hygiene-batch.internal.md
scripts/: bump_version.py  check_architecture_reference_v04.py  check_briefloop_skill_freshness.py  check_capabilities.py  check_citation_parser_home.py  check_codebuddy_adapter_smoke.py  check_launch_smoke.py  check_minimal_comparative_eval.py  check_product_baseline.py  check_public_product_rename.py  check_public_safety.py  check_release_consistency.py  check_runtime_asset_parity.py  check_skill_contract.py  check_terms.py  check_v1_pilot_evidence.py  check_v1_rc_readiness.py  check_version_consistency.py  check_workbuddy_skill_pack.py  demo-deep-dive.sh  demo.py  demo.sh  fetch_github_review_comments.py  gen_features_doc.py  generate_agent_configs.py  install.ps1  install.sh  merge-batch-graphs.py  public_safe_scan.py  release.sh  run_v1_rc_safety_smoke.py  setup.ps1  setup.sh  sync_hermes_plugin_skills.py
tests/: __init__.py  conftest.py  helpers.py  test_069_e2e_stabilization.py  test_a2_isolation_preflight.py  test_agent_artifact_intake.py  test_agent_config_generation.py  test_agent_onboarding_docs.py  test_analysis_blocks.py  test_analysis_module_registry.py  test_architecture_reference_v04.py  test_artifact_registry_read.py  test_atomic_reader_projection.py  test_audience_memory.py  test_audience_profiles.py  test_audit_semantic.py  test_audited_brief_contract.py  test_auditor_interface.py  test_b01_final_output_audit.py  test_b02_search_execution.py  test_b0304_url_source_model.py  test_b0506_config_semantics.py  test_b0809_error_observability.py  test_b1718_format_docs.py  test_brave_backend.py  test_brief_html_isolation.py  test_brief_html_packaging.py  test_brief_html_pages.py  test_brief_html_render.py  test_briefloop_operator_skill.py  test_briefloop_skill_freshness.py  test_capabilities.py  test_case_applicability.py  test_check_v1_rc_readiness.py  test_checkout_publication_v2.py  test_checkout_revision_v2.py  test_ci_merge_gate.py  test_citation_parser_home.py  test_citations.py  test_claim_ledger.py  (+163 more)
(+600 files in other folders)
