[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-brief-workflow"
version = "0.1.0"
description = "Source-grounded, audit-ready multi-agent workflow for business and research briefs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Yihong Guo"}
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
]

[project.scripts]
multi-agent-brief = "multi_agent_brief.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
